--- a/Test/Fixtures/log.test2.warning.ini
+++ b/Test/Fixtures/log.test2.warning.ini
@@ -1,4 +1,4 @@
 path = /tmp/webstream.logtest.log
-level = emergency
+level = warn
 application_name = webstream.logtest
-format = [%d{%Y-%m-%d %H:%M:%S.%f}][%c][%5L] %m
+format = %m
