--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ before_script:
   - mkdir -p build/logs
 
 script:
-  - if [[ $VERSION = 'latest' ]]; then docker run -v /home/travis/build/webstream-framework/Log:/workspace/ webstream/php-alpine phpdbg -qrr vendor/bin/phpunit --configuration phpunit.xml --coverage-clover=coverage.clover; fi
-  - if [[ $VERSION != 'latest' ]]; then docker run -v /home/travis/build/webstream-framework/Log:/workspace/ webstream/php-alpine vendor/bin/phpunit; fi
+  - if [[ $VERSION = 'latest' ]]; then vendor/bin/phpunit --configuration phpunit.xml --coverage-clover=coverage.clover; fi
+  - if [[ $VERSION != 'latest' ]]; then vendor/bin/phpunit; fi
 
 after_script:
   - if [[ $VERSION = 'latest' ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
