--- a/Test/Fixtures/log.test1.alert.ini
+++ b/Test/Fixtures/log.test1.alert.ini
@@ -1,4 +1,4 @@
-path = webstream.logtest.log
+path = /tmp/webstream.logtest.log
 level = alert
 application_name = webstream.logtest
 format = [%d{%Y-%m-%d %H:%M:%S.%f}][%c][%5L] %m
