--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,6 +16,10 @@ jobs:
     - uses: nanasess/setup-php@master
       with:
         php-version: '7.4'
+    - uses: actions/setup-ruby@v1
+      with:
+        - ruby-version: '2.7'
+    - run: rake -V
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
