--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,7 +18,7 @@ jobs:
         php-version: '7.4'
     - uses: actions/setup-ruby@v1
       with:
-        - ruby-version: '2.7'
+        ruby-version: '2.7'
     - run: rake -V
     - name: Cache Composer packages
       id: composer-cache
